# CLI_Music_Player

./: CMakeLists.txt  README.md  debug.txt
include/: Application.hpp  FileManager.hpp  FileManagerSubWindow.hpp  FileSubWindow.hpp  MusicPlayer.hpp  PlayerSubWindow.hpp  SubWindow.hpp  Utility.hpp  Window.hpp
src/: Application.cpp  FileManager.cpp  FileManagerSubWindow.cpp  FileSubWindow.cpp  Main.cpp  MusicPlayer.cpp  PlayerSubWindow.cpp  SubWindow.cpp  Utility.cpp  Window.cpp
